<resources>
    <string name="app_name">Alexon Products</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="onboarding1_title">Browse your  menu and order directly</string>
    <string name="onboarding2_title">Even to space with us! Together </string>
    <string name="onboarding3_title">Pickup delivery at your door</string>

    <string name="onboarding_desc">Our app can send you everywhere, even space. For only $2.99 per month</string>
    <string name="login">Login</string>
    <string name="your_email_or_phone">Your email or phone</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="search_products">Search Products</string>
    <string name="product_item">Product Item</string>
    <string name="categories">Categories</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="see_preview"><u>See Preview</u></string>
    <string name="choice_of_other_products">Choice of Other Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="user_name">Eljad Eendaz</string>
    <string name="my_orders">My Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="helps_and_faqs"><![CDATA[Helps & FAQS]]></string>
    <string name="log_out">Log Out</string>
    <string name="added_to_cart">Added To Cart !</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="search_product">Search Product</string>
    <string name="enter_your_email_and_password">Enter your email and password ,please</string>
</resources>